# unsta-sfs

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  appdesc.yml  docker-compose.yaml  pyproject.toml
.github/actions/cache-package-managment/: action.yml
.github/actions/setup-python-environment/: action.yml
.github/workflows/: sfs.yaml
src/: cli.py  main.py
src/common/: boto_client.py  error_codes.py  exception.py  functional.py  mongo_client.py  permissions.py  setup_app_perms.py  utils.py
src/config/: __init__.py  database.py  settings.py
src/models/: __init__.py  bucket.py  media.py  mixins.py
src/routers/: __init__.py  api.py  bucket.py  media.py
src/schemas/: __init__.py  bucket.py  media.py  schema.py
src/services/: __init__.py  bucket.py  media.py
tests/: .test.env  conftest.py
tests/common/: test_boto_client.py
tests/config/: test_mongo_client.py
tests/database/: test_mongo_client.py
tests/routers/: test_api.py  test_bucket_api.py  test_media_api.py
